--- a/supervisor/php-fpm.conf
+++ b/supervisor/php-fpm.conf
@@ -1,5 +1,5 @@
 [program:php-fpm]
-command=/usr/sbin/php-fpm7.0 -F -c /etc/php/7.0/fpm/php.ini -y /etc/php/7.0/fpm/php-fpm.conf 
+command=/usr/sbin/php-fpm7.0 -F -R -c /etc/php/7.0/fpm/php.ini -y /etc/php/7.0/fpm/php-fpm.conf 
 autostart=true
 autorestart=true
 priority=5
